--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,23 @@
 @tailwind utilities;
 
 body {
-  @apply max-w-[1024px] mx-auto md:w-10/12;
+  @apply max-w-[1024px] mx-auto md:w-10/12 text-center;
+}
+
+.text-gradient {
+  @apply bg-gradient-to-r from-purple-500 to-pink-500 text-transparent bg-clip-text;
+}
+
+.btn-primary {
+  @apply bg-gradient-to-r from-purple-500 to-pink-500 text-white text-sm rounded-lg px-4 py-2;
+}
+
+.btn-primary:hover {
+  @apply bg-gradient-to-r from-pink-500 to-purple-500;
+}
+
+.btn-primary:focus {
+  @apply ring-4 outline-none ring-purple-200;
 }
 
 /* body {
